# hate

./: .gitignore  1b_groupswap_demensionsentence.xlsx  1b_run_group_swap_experiments.py  6_run_experiments.py  7_outputs_together.py  8_new_chinesehatedata+zeroshot+cot.xlsx  8_new_englishhatedata_2400+zeroshot+cot.xlsx  8_tfidf_svm_baseline.py  9_model_f1_brier_skip_missing.csv  AGENTS.md  MANUSCRIPT.md  README.md  aggregate_model_outputs.py  compile.sh  en2400to1200x2.py  find_incomplete_claude_cot.py  generate_placeholder_figures.py  human_model_delta_similarity.py  human_model_delta_similarity_by_participant_gender.py  human_model_dz_descriptive_comparison.py  make_human_dimension_heatmap.py  make_icc_forest_grid.py  make_method_design_schematic.py  make_model_level1_forest_grid.py  make_paper_q5_q7_addons.py  make_paper_revision_figures.py  make_poster_compact_fig.py  make_poster_scale_options.py  make_presentation_v2.py  make_presentation_v3.py  paper_results_outline.md  pipeline.py  plot_1b_overall_three_scale.py  plot_f1_brier.py  plot_f1_brier_from_validated_csv.py  plot_f1_brier_validated.py  plot_language_slope.py  plot_model_by_level1_by_scale.py  prompts.py  pyproject.toml  (+5 more)
data/: 11_1b_analyze.py  12_1b_plot.py  1b_groupswap_demensionsentence.xlsx  5_new_chinesehatedata_2400_balanced.xlsx  5_new_englishhatedata_2400_balanced.xlsx  8_new_chinesehatedata+zeroshot+cot.xlsx  8_new_englishhatedata_2400+zeroshot+cot.xlsx  9_brier.py  9_chineseF1.py  9_englishF1.py  9_new_chinesehatedata_model_brier_scores.xlsx  9_new_chinesehatedata_model_f1_scores.xlsx  sample.csv  (+4 more)
(+49 files in other folders)
